--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                 <a href="https://www.instagram.com/code_and_current_official/" target="_blank" class="home__social-icon"
                     aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://github.com/codeandcurrent" target="_blank" class="home__social-icon"
+                <a href="https://github.com/Abhishektm-code" target="_blank" class="home__social-icon"
                     aria-label="GitHub"><i class="fab fa-github"></i></a>
             </div>
 
@@ -152,12 +152,12 @@
         <section class="contact section" id="contact">
             <h2 class="section-title">Contact</h2>
             <div class="contact__container bd-grid">
-                <form action="https://chatgpt.com/" method="POST">
+                <form action="tmabhishek93@gmail.com" method="POST">
                     <input type="text" name="name" placeholder="Name" class="contact__input" required>
                     <input type="email" name="email" placeholder="Email" class="contact__input" required>
                     <textarea name="message" id="message" cols="30" rows="10" class="contact__input"
                         placeholder="Your Message"></textarea>
-                    <input type="submit" value="Send" class="contact__button button">
+                    <iframe src="https://mail.google.com/mail/u/0/#inbox?compose=new" frameborder="0"><input type="submit" value="Send" class="contact__button button"></iframe>
                 </form>
             </div>
         </section>
@@ -174,7 +174,7 @@
                 aria-label="Instagram">
                 <i class='bx bxl-instagram'></i>
             </a>
-            <a href="https://github.com/codeandcurrent" class="footer__icon" target="_blank" aria-label="GitHub">
+            <a href="https://github.com/Abhishektm-code" class="footer__icon" target="_blank" aria-label="GitHub">
                 <i class='bx bxl-github'></i>
             </a>
             <a href="https://www.linkedin.com/in/abhishek-abhi-915272316" class="footer__icon" target="_blank"
