--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__title">Abhishek</p>
+        <p class="footer__title">Abhishek T M</p>
         <div class="footer__social">
             <a href="https://youtube.com/@Codeandcurrent_sum" class="footer__icon" target="_blank" aria-label="YouTube">
                 <i class='bx bxl-youtube'></i>
